adiciona link github

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <body>
   <a href="#sobreMim">Sobre mim</a>
   <a href="https://www.youtube.com/@cmecampodeourique/" target="_blank">Youtube da igreja em que congrego</a>
+  <a href="https://www.github.com/EvertonBalland/" target="_blank">Meu perfil github</a>
   <h1 class="meuNome">Everton Balland</h1>
   <div class="img-container">
   <img src="perfil.jpg" height="300px" alt="Everton sorrindo e segurando seu bass" id="foto"></div>
