--- a/index.html
+++ b/index.html
@@ -4,42 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Portfólio Web</title>
-  <style>
-    body{
-      /*imagem de fundo*/
-      background-image: url(fundo.jpg)
-    }
-
-    body{
-      /*fonte que remete a um jornal antigo*/
-      font-family: 'Courier New', Courier, monospace;
-      font-size: 16px;
-      font-weight:400
-      
-    }
-      .sobreMim{
-        background-color: rgba(211, 211, 211, 0.536);
-        text-align:center;
-    }
-
-      .lista{
-        background-color:rgba(211, 211, 211, 0.536);
-        text-align:left;
-      }
-      .meuNome{
-        background-color:rgba(211, 211, 211, 0.536);
-        text-align: center;
-      }
-      .img-container{
-        text-align: center;
-        display: block;
-      }
-      .Idade{
-        text-align: center;
-      }
-
-  </style>
 </head>
 <body>
   <a href="#sobreMim">Sobre mim</a>
