atualiza portifolio layout

--- a/index.html
+++ b/index.html
@@ -9,25 +9,24 @@
 </head>
 <body>
   <a href="#sobreMim">Sobre mim</a>
-  <a href="https://www.youtube.com/@cmecampodeourique/" target="_blank">Youtube da igreja em que congrego</a>
-  <a href="https://www.github.com/EvertonBalland/" target="_blank">Meu perfil github</a>
+  <a href="https://www.github.com/EvertonBalland/" target="_blank">GitHub</a>
   <h1 class="meuNome">Everton Balland</h1>
   <div class="img-container">
-  <img src="perfil.jpg" height="300px" alt="Everton sorrindo e segurando seu bass" id="foto"></div>
+  <img src="perfil.jpg" height="300px" alt="Everton sorrindo e segurando seu bass" id="perfil"></div>
   <p class="Idade"><em>Idade 35 anos</em></p>
-  <p class="sobreMim">Nascido em Joinville/SC. Hoje vivo em Lisboa com minha família, casado pai de duas meninas lindas e após muito pensar e analizar as tendências de mercado na Europa e no mundo, decidi mudar de carreira e escolhi Desenvolvimento Web como nova profissão.<br> Escolhi a <strong><em>Trybe</em></strong>, por ser uma escola de programação referência no Brasil e também por sua metodologia que se adequa exatamente com aquilo que preciso.<br> Sou aficcionado por games e tecnologia e busco cada vez mais aprender e melhorar os conhecimentos que já tenho obtido nesta nova fase visando me atualizar para as novas tecnologia que a cada dia surgem no mundo.</p>
-  <p class="resido"><strong>Lisboa - Portugal</strong></p>
-  <h2>Minhas habilidades ou falta delas</h2>
+  <p class="sobreMim">Nascido em Joinville/SC. Hoje vivo em Lisboa com minha família, casado pai de duas meninas lindas e após muito pensar e analizar as tendências de mercado na Europa e no mundo, decidi mudar de carreira e escolhi Desenvolvimento Web como nova profissão.<br> 
+  Escolhi a <strong><em>Trybe</em></strong>, por ser uma escola de programação referência no Brasil e também por sua metodologia que se adequa exatamente com aquilo que preciso.<br>
+  Sou aficcionado por games e tecnologia e busco cada vez mais aprender e melhorar os conhecimentos que já tenho obtido nesta nova fase visando me atualizar para as novas tecnologia que a cada dia surgem no mundo.</p>
+  <p class="morada"><strong>Lisboa - Portugal</strong></p>
 
   <ul class="lista">
+    <h2>Minhas habilidades</h2>
      <li class="javascript">Aprendiz em HTML, CSS e Javascript</li>
      <li class="midia">Lidero a equipe de mídia da minha igreja</li>
-     <li class="bass">Toco contrabaixo</li>
-     <li class="esporte">Não sou bom com esportes</li>
+     <li class="bass">Toco contrabaixo e bateria</li>
      <li class="tec">Aprendo com facilidade</li>
-     <li class="Turista">Péssimo Turista</li>
   </ul>
   <a href="#perfil">Minha foto</a>
-  <a href="https://blog.betrybe.com/carreira/frontend/" target="_blank">Artigo legal</a>
+  <a href="https://blog.betrybe.com/carreira/frontend/" target="_blank">Sobre frontend</a>
 </body>
 </html>
